.vendor/dislin/examples/ch/dislin.h

void  conpts (const double *xray, int n, const double *yray, int m, 
              const double *zmat, double zlev, double *xpts, double *ypts, 
              int maxpts, int *nray, int maxray, int *nlins);
void  conshd (const double *xray, int n, const double *yray, int m,
              const double *zmat, const double *zlev, int nlev);
void  conshd2 (const double *xmat, const double *ymat, const double *zmat, 
               int n, int m, const double *zlev, int nlev);
void  conshd3d (const double *xray, int n, const double *yray, int m, 
              const double *zmat, const double *zlev, int nlev);
void  contri (const double *xray, const double *yray, const double *zray, 
              int n, const int *i1ray, const int *i2ray, const int *i3ray, 
              int ntri, double zlev);
void  contur (const double *xray, int n, const double *yray, int m,
              const double *zmat, double zlev);
void  contur2 (const double *xmat, const double *ymat, const double *zmat, 
               int n, int m, double zlev);
void  cross  (void);
void  crvmat (const double *zmat, int n, int m, int ixpts, int iypts);
void  crvqdr (const double *xray, const double *yray, const double *zray, 
              int n);
 
void  crvt3d (const double *xray, const double *yray, const double *zray,
              const double *rray, const int *icray, int n);
void  crvtri (const double *xray, const double *yray, const double *zray,
              int n, const int *i1ray, const int *i2ray, const int *i3ray,
              int ntri);
int   csrkey (void);
void  csrlin (int *ix1, int *iy1, int *ix2, int *iy2);
void  csrmod (const char *cmod, const char *ckey);
void  csrpol (int *ix, int *iy, int nmax, int *n, int *iret);
int   csrpos (int *ix, int *iy);
void  csrpt1 (int *ix, int *iy);
void  csrpts (int *ix, int *iy, int nmax, int *n, int *iret);
void  csrmov (int *ix, int *iy, int nmax, int *n, int *iret);
void  csrrec (int *ix1, int *iy1, int *ix2, int *iy2);
void  csrtyp (const char *copt);
void  csruni (const char *copt);
void  curv3d (const double *xray, const double *yray, const double *zray, 
              int n);
void  curve  (const double *xray, const double *yray, int n);
void  curve3 (const double *xray, const double *yray, const double *zray, 
              int n);
void  curvmp (const double *xray, const double *yray, int n);
void  curvx3 (const double *xray, double y, const double *zray, int n);
void  curvy3 (double x, const double *yray, const double *zray, int n);
void  cyli3d (double xm, double ym, double zm, double r, double h, 
              int nsk1, int nsk2);
 
void  dash   (void);
void  dashl  (void);
void  dashm  (void);
void  dbffin (void);
int   dbfini (void);
void  dbfmod (const char *copt);
void  delglb (void);
void  digits (int ndig, const char *cax);
void  disalf (void);
void  disenv (const char *cenv);
void  disfin (void);
void  disini (void);
void  disk3d (double xm, double ym, double zm, double r1, double r2, 
              int nsk1, int nsk2);
 
void  doevnt (void);
void  dot    (void);
void  dotl   (void);
void  duplx  (void);
int   dwgbut (const char *cstr, int ival);
int   dwgerr (void);
char *dwgfil (const char *clab, const char *cstr, const char *cmask);
int   dwglis (const char *clab, const char *clis, int ilis);
void  dwgmsg (const char *cstr);
char *dwgtxt (const char *clab, const char *cstr);
void  ellips (int nx, int ny, int na, int nb);
void  endgrf (void);
void  erase  (void);
void  errbar (const double *x, const double *y, 
              const double *err1, const double *err2, int n);
void  errdev (const char *cdev);
void  errfil (const char *cfil);
void  errmod (const char *cstr, const char *copt);
void  eushft (const char *cnat, const char *cshf);
void  expimg (const char *cfil, const char *copt);
void  expzlb (const char *cstr);