.vendor/dislin/julia/Dislin.jl


function conpts(xray::Vector{Float64}, n::Int64, yray::Vector{Float64},
                m::Int64, zmat::Array{Float64, 2}, zlev::Float64,
                xpts::Vector{Float64}, ypts::Vector{Float64}, maxpts::Int64,
                nray::Vector{Int32}, maxray::Int64)
  z = transpose(zmat)
  nlines = Cint[0]
  ccall((:conpts, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Int32, Ptr{Float64}, 
          Int32, Ptr{Float64}, Float64, Ptr{Float64}, Ptr{Float64}, Int32,
          Ptr{Int32}, Int32, Ptr{Cint}), xray, n, yray, m, z, zlev, xpts, ypts,
          maxpts, nray, maxray, nlines)
  z = 0
  return convert(Int64, nlines[1])
end

function conshd(xray::Vector{Float64}, n::Int64, yray::Vector{Float64},
                m::Int64, zmat::Array{Float64, 2}, zlev::Vector{Float64},
                nlev::Int64)
  z = transpose(zmat)
  ccall((:conshd, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Int32, Ptr{Float64}, 
          Int32, Ptr{Float64}, Ptr{Float64}, Int32), xray, n, yray, m, z, 
          zlev, nlev)
  z = 0  # free z
end

function conshd2(xmat::Array{Float64, 2}, ymat::Array{Float64, 2},
                zmat::Array{Float64, 2}, n::Int64, m::Int64, 
                zlev::Vector{Float64}, nlev::Int64)
  x = transpose(xmat)
  y = transpose(ymat)
  z = transpose(zmat)
  ccall((:conshd2, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Int32, Int32, Ptr{Float64}, Int32), x, y, z, n, m, 
          zlev, nlev)
  x = 0 
  y = 0 
  z = 0 
end

function conshd3d(xray::Vector{Float64}, n::Int64, yray::Vector{Float64},
                m::Int64, zmat::Array{Float64, 2}, zlev::Vector{Float64},
                nlev::Int64)
  z = transpose(zmat)
  ccall((:conshd3d, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Int32, Ptr{Float64},
          Int32, Ptr{Float64}, Ptr{Float64}, Int32), xray, n, yray, m, z, 
          zlev, nlev)
  z = 0  # free z
end

function contri(xray::Vector{Float64}, yray::Vector{Float64}, 
                zray::Vector{Float64}, n::Int64, i1ray::Vector{Int32}, 
                i2ray::Vector{Int32}, i3ray::Vector{Int32}, ntri::Int64,
                zlev::Float64)
  ccall((:contri, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Int32, Ptr{Int32}, Ptr{Int32}, Ptr{Int32}, Int32,
          Float64), xray, yray, zray, n, i1ray, i2ray, i3ray, ntri, zlev)
end

function contur(xray::Vector{Float64}, n::Int64, yray::Vector{Float64},
                m::Int64, zmat::Array{Float64, 2}, zlev::Float64)
  z = transpose(zmat)
  ccall((:contur, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Int32, Ptr{Float64}, 
          Int32, Ptr{Float64}, Float64), xray, n, yray, m, z, zlev)
  z = 0  # free z
end

function contur2(xmat::Array{Float64, 2}, ymat::Array{Float64, 2},
                zmat::Array{Float64, 2}, n::Int64, m::Int64, zlev::Float64)
  x = transpose(xmat)
  y = transpose(ymat)
  z = transpose(zmat)
  ccall((:contur2, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Int32, Int32, Float64), x, y, z, n, m, zlev)
  x = 0 
  y = 0 
  z = 0 
end

function cross()
  ccall((:cross, "libdislin_d.so"), Cvoid, ())
end

function crvmat(zmat::Array{Float64, 2}, n::Int64, m::Int64, ixpts::Int64, 
                iypts::Int64)
  z = transpose(zmat)
  ccall((:crvmat, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Int32, Int32, Int32, 
           Int32), z, n, m, ixpts, iypts)
  z = 0  # free z
end

function crvqdr(xray::Vector{Float64}, yray::Vector{Float64}, 
                zray::Vector{Float64}, n::Int64)
  ccall((:crvqdr, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Int32), xray, yray, zray, n)
end

function crvt3d(xray::Vector{Float64}, yray::Vector{Float64}, 
                zray::Vector{Float64}, rray::Vector{Float64},
                icray::Vector{Int32}, n::Int64)
  ccall((:crvt3d, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Ptr{Float64}, Ptr{Int32}, Int32), 
          xray, yray, zray, rray, icray, n)
end

function crvtri(xray::Vector{Float64}, yray::Vector{Float64}, 
                zray::Vector{Float64}, n::Int64, i1ray::Vector{Int32},
                i2ray::Vector{Int32}, i3ray::Vector{Int32}, ntri::Int64)
  ccall((:crvtri, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Int32, Ptr{Int32}, Ptr{Int32}, Ptr{Int32}, Int32), 
          xray, yray, zray, n, i1ray, i2ray, i3ray, ntri)
end

function csrkey()
  n = ccall((:csrkey, "libdislin_d.so"), Int32, ())
  return convert(Int64, n)
end

function csrlin()
  i1 = Cint[0]
  i2 = Cint[0]
  i3 = Cint[0]
  i4 = Cint[0]
  ccall((:csrlin, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}, Ptr{Cint},
           Ptr{Cint}), i1, i2, i3, i4)
  return convert(Int64, i1[1]), convert(Int64, i2[1]), convert(Int64, i3[1]),
         convert(Int64, i4[1])
end

function csrmod(s1::String, s2::String)
  ccall((:csrmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function csrpol(ixray::Vector{Int32}, iyray::Vector{Int32}, nmax::Int64)
  i1 = Cint[0]
  i2 = Cint[0]
  ccall((:csrpol, "libdislin_d.so"), Cvoid, 
          (Ptr{Int32}, Ptr{Int32}, Int32, Ptr{Cint}, Ptr{Cint}), 
          ixray, iyray, nmax, i1, i2)
  return convert(Int64, i1[1])
end

function csrpos()
  i1 = Cint[0]
  i2 = Cint[0]
  n = ccall((:csrpos, "libdislin_d.so"), Int32, (Ptr{Cint}, Ptr{Cint}), i1, i2)
  return convert(Int64, i1[1]), convert(Int64, i2[1]), n
end

function csrpt1()
  i1 = Cint[0]
  i2 = Cint[0]
  ccall((:csrpt1, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}), i1, i2)
  return convert(Int64, i1[1]), convert(Int64, i2[1])
end

function csrpts(ixray::Vector{Int32}, iyray::Vector{Int32}, nmax::Int64)
  i1 = Cint[0]
  i2 = Cint[0]
  ccall((:csrpts, "libdislin_d.so"), Cvoid, 
          (Ptr{Int32}, Ptr{Int32}, Int32, Ptr{Cint}, Ptr{Cint}), 
          ixray, iyray, nmax, i1, i2)
  return convert(Int64, i1[1])
end

function csrmov(ixray::Vector{Int32}, iyray::Vector{Int32}, nmax::Int64)
  i1 = Cint[0]
  i2 = Cint[0]
  ccall((:csrmov, "libdislin_d.so"), Cvoid, 
          (Ptr{Int32}, Ptr{Int32}, Int32, Ptr{Cint}, Ptr{Cint}), 
          ixray, iyray, nmax, i1, i2)
  return convert(Int64, i1[1])
end

function csrrec()
  i1 = Cint[0]
  i2 = Cint[0]
  i3 = Cint[0]
  i4 = Cint[0]
  ccall((:csrreg, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}, Ptr{Cint},
           Ptr{Cint}), i1, i2, i3, i4)
  return convert(Int64, i1[1]), convert(Int64, i2[1]), convert(Int64, i3[1]),
         convert(Int64, i4[1])
end

function csrtyp(s::String)
  ccall((:csrtyp, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function csruni(s::String)
  ccall((:csruni, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function curv3d(xray::Vector{Float64}, yray::Vector{Float64}, 
                zray::Vector{Float64}, n::Int64)
  ccall((:curv3d, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Int32), xray, yray, zray, n)
end

function curve(xray::Vector{Float64}, yray::Vector{Float64}, n::Int64)
  ccall((:curve, "libdislin_d.so"), Cvoid, 
          (Ptr{Float64}, Ptr{Float64}, Int32), xray, yray, n)
end

function curve3(xray::Vector{Float64}, yray::Vector{Float64}, 
                zray::Vector{Float64}, n::Int64)
  ccall((:curve3, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Int32), xray, yray, zray, n)
end

function curvmp(xray::Vector{Float64}, yray::Vector{Float64}, n::Int64)
  ccall((:curvmp, "libdislin_d.so"), Cvoid, 
         (Ptr{Float64}, Ptr{Float64}, Int32), xray, yray, n)
end

function curvx3(xray::Vector{Float64}, y::Float64, 
                zray::Vector{Float64}, n::Int64)
  ccall((:curvx3, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Float64, 
          Ptr{Float64}, Int32), xray, y, zray, n)
end

function curvy3(x::Float64, yray::Vector{Float64}, 
                zray::Vector{Float64}, n::Int64)
  ccall((:curvy3, "libdislin_d.so"), Cvoid, (Float64, Ptr{Float64}, 
          Ptr{Float64}, Int32), x, yray, zray, n)
end

function cyli3d(x1::Float64, x2::Float64, x3::Float64, x4::Float64,
           x5::Float64, i1::Int64, i2::Int64)
  ccall((:cyli3d, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Float64, Float64, Int32, Int32), 
          x1, x2, x3, x4, x5, i1, i2)
end

function dash()
  ccall((:dash, "libdislin_d.so"), Cvoid, ())
end

function dasl()
  ccall((:dashl, "libdislin_d.so"), Cvoid, ())
end

function dashm()
  ccall((:dashm, "libdislin_d.so"), Cvoid, ())
end

function dbffin()
  ccall((:dbffin, "libdislin_d.so"), Cvoid, ())
end

function dbfini()
  n = ccall((:dbfini, "libdislin_d.so"), Int32, ())
  return convert(Int64, n)
end

function dbfmod(s::String)
  ccall((:dbfmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function delglb()
  ccall((:delglb, "libdislin_d.so"), Cvoid, ())
end

function digits(i::Int64, s::String)
  ccall((:digits, "libdislin_d.so"), Cvoid, (Int32, Ptr{UInt8}), i, s)
end

function disalf()
  ccall((:disalf, "libdislin_d.so"), Cvoid, ())
end

function disenv(s::String)
  ccall((:disenv, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function disfin()
  ccall((:disfin, "libdislin_d.so"), Cvoid, ())
end

function disini()
  ccall((:disini, "libdislin_d.so"), Cvoid, ())
end

function disk3d(x1::Float64, x2::Float64, x3::Float64, x4::Float64,
           x5::Float64, i1::Int64, i2::Int64)
  ccall((:disk3d, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Float64, Float64, Int32, Int32), 
          x1, x2, x3, x4, x5, i1, i2)
end

function doevnt()
  ccall((:doevnt, "libdislin_d.so"), Cvoid, ())
end

function dot()
  ccall((:dot, "libdislin_d.so"), Cvoid, ())
end

function dotl()
  ccall((:dotl, "libdislin_d.so"), Cvoid, ())
end

function duplx()
  ccall((:duplx, "libdislin_d.so"), Cvoid, ())
end

function dwgbut(s::String, i::Int64)
  n = ccall((:dwgbut, "libdislin_d.so"), Int32, (Ptr{UInt8}, Int32), s, i)
  return convert(Int64, n)
end

function dwgerr()
  n = ccall((:dwgerr, "libdislin_d.so"), Int32, ())
end

function dwgfil(s1::String, s2::String, s3::String)
  p = ccall((:dwgfil, "libdislin_d.so"), Cstring, (Ptr{UInt8}, Ptr{UInt8},
              Ptr{UInt8}), s1, s2, s3)
  return bytestring(p)
end

function dwglis(s1::String, s2::String, i::Int64)
  n = ccall((:dwglis, "libdislin_d.so"), Int32, (Ptr{UInt8}, Ptr{UInt8},
              Int32), s1, s2, i)
  return convert(Int64, n)
end

function dwgmsg(s::String)
  ccall((:dwgmsg, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function dwgtxt(s1::String, s2::String)
  p = ccall((:dwgtxt, "libdislin_d.so"), Cstring, (Ptr{UInt8}, Ptr{UInt8}),
              s1, s2)
  return bytestring(p)
end

function ellips(i1::Int64, i2::Int64, i3::Int64, i4::Int64)
  ccall((:ellips, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Int32), 
           i1, i2, i3, i4)
end

function endgrf()
  ccall((:endgrf, "libdislin_d.so"), Cvoid, ())
end

function erase()
  ccall((:erase, "libdislin_d.so"), Cvoid, ())
end

function errbar(xray::Vector{Float64}, yray::Vector{Float64}, 
                err1::Vector{Float64}, err2::Vector{Float64}, n::Int64)
  ccall((:errbar, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Ptr{Float64}, Int32), xray, yray, err1, err2, n)
end

function errdev(s::String)
  ccall((:errdev, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function errfil(s::String)
  ccall((:errfil, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function errmod(s1::String, s2::String)
  ccall((:errmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function eushft(s1::String, s2::String)
  ccall((:eushft, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function expimg(s1::String, s2::String)
  ccall((:expimg, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function expzlb(s::String)
  ccall((:expzlb, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end
